# UAVReaders

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  c_introspect.cpp  c_introspect.h  dataflash.cpp  dataflash.h  dataflashreader.cpp  introspect_gen.py  main.cpp  makestructs.py  mavlinkreader.cpp  pyinterop.pyx  pyproject.toml  readers.cpp  readers.h  setup.py  table.h  uavreaders-1.0.4-cp313-cp313-linux_x86_64.whl
.github/workflows/: build_wheels.yaml  make_wheels.yml  manylinux-wheels-pypi.yml  new-upload-pypi.yaml  test_uavreaders.yml
test_data/: dataflash_test.out  example_parsed_dataflash.json  mavlink_test.out
