[build-system]
requires = ["setuptools", "cython ~= 0.29.0", "regex"]
build-backend = "setuptools.build_meta"

[project]
name = "UAVReaders"
version = "1.0.4"

authors = [
  {name = "Christian Clifford", email="cjclifford@alaska.edu"},
]
description = "Parsers for UAV/Aerial Drone-related formats like MavLink and DataFlash"
readme = "README.md"
requires-python = ">=3.8"

[tool.cibuildwheel]
skip = "pp*"